# target-snowflake

./: .gitignore  CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml  test_target_error.json
.github/workflows/: ci.yaml  veracode-static-scan.yml
export_snowflake/: __init__.py  db_sync.py  exceptions.py  file_format.py  flattening.py  stream_utils.py
export_snowflake/file_formats/: csv.py  parquet.py
export_snowflake/upload_clients/: base_upload_client.py
target_snowflake/: __init__.py  db_sync.py  exceptions.py  file_format.py  flattening.py
target_snowflake/file_formats/: csv.py
target_snowflake/upload_clients/: snowflake_upload_client.py
tests/integration/: .env.sample  test_export_snowflake.py  utils.py
tests/unit/: test_db_sync.py  test_export_snowflake.py  test_file_format.py  test_flattening.py  test_stream_utils.py  test_target_snowflake.py
tests/unit/file_formats/: test_csv.py  test_parquet.py
