[tool.poetry]
name = "export-snowflake"
version="4.0.0"
description = "Export for loading data from S3 to Snowflake"
authors = ["Wise"]
classifiers = [
          'License :: OSI Approved :: Apache Software License',
          'Programming Language :: Python :: 3 :: Only',
          'Programming Language :: Python :: 3.7',
          'Programming Language :: Python :: 3.8',
          'Programming Language :: Python :: 3.9',
      ]

[tool.poetry.dependencies]
python = ">3.9.0,<3.9.1 || >3.9.1,<3.10"
pipelinewise-singer-python = "1.*"
pandas = "2.3.1"
snowflake-connector-python = "3.13.2"
inflection = "0.5.1"
joblib = "1.2.0"
boto3 = "1.23.10"
certifi = ">=2024.7.4"
[tool.poetry.dev-dependencies]
pylint = "2.12.*"
pytest = "7.1.1"
pytest-cov = "*"
python-dotenv = "0.19.*"
pyopenssl = "^24.0.0"
toml = "*"
tesults = "*"
pytest-tesults = "*"
cryptography = "^44.0.1"
idna = "3.7"
requests = "2.32.4"
zipp = "3.19.2"
pycryptodomex = "3.19.1"
setuptools = "80.9.0"
urllib3 = "1.26.20"

[tool.poetry.scripts]
export-snowflake = "export_snowflake:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"