[tool.poetry]
name = "export-snowflake"
version="3.2.0"
description = "Export for loading data from S3 to Snowflake"
authors = ["Wise"]
classifiers = [
          'License :: OSI Approved :: Apache Software License',
          'Programming Language :: Python :: 3 :: Only',
          'Programming Language :: Python :: 3.7',
          'Programming Language :: Python :: 3.8',
          'Programming Language :: Python :: 3.9',
      ]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.0"
pipelinewise-singer-python = "1.*"
snowflake-connector-python = "3.13.1"
pandas = "^1.3.5"
inflection = "0.5.1"
joblib = "1.2.0"
boto3 = "1.23.10"
certifi = ">=2024.7.4"
cryptography = "44.0.3"
[tool.poetry.dev-dependencies]
pylint = "2.12.*"
pytest = "7.1.1"
pytest-cov = "*"
python-dotenv = "0.19.*"
toml = "*"
tesults = "*"
pytest-tesults = "*"
idna = "3.7"
requests = "2.32.4"
zipp = "3.19.2"
pycryptodomex = "3.19.1"

[tool.poetry.scripts]
export-snowflake = "export_snowflake:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
