[tool.poetry]
name = "target-snowflake"
version="3.0.0.0"
description = "Singer.io target for loading data to Snowflake - PipelineWise compatible"
authors = ["Wise"]
classifiers = [
          'License :: OSI Approved :: Apache Software License',
          'Programming Language :: Python :: 3 :: Only',
          'Programming Language :: Python :: 3.7',
          'Programming Language :: Python :: 3.8',
          'Programming Language :: Python :: 3.9',
      ]

[tool.poetry.dependencies]
python = "^3.13.0"
singer-python = "6.3.0"
snowflake-connector-python = "^4.2.0"
pandas = "2.3.3"
inflection = "0.5.1"
joblib = "^1.5.3"
boto3 = "^1.42.19"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
pytest-cov = "*"
tesults = "*"
pytest-tesults = "*"

[tool.poetry.scripts]
target-snowflake = "target_snowflake:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
